# locus

./: .dockerignore  .env.example  .env.production.example  .git-blame-ignore-revs  .gitignore  .gitmodules  BACKLOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  Dockerfile.dev  GETTING_STARTED.md  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE.md  TOPIC_REFACTOR_STATUS.md  deploy-cloudflare-pages.sh  deploy-helm.sh  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.dev.sh  generate-secrets.sh  seed_test_topic.sql  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.githooks/: pre-commit
.github/: FUNDING.yml
content-gen/: generate.py
crates/backend/: Cargo.toml
crates/backend/migrations/: 001_initial.sql  003_topic_elo_table.sql  004_seed_problems.sql  005_oauth.sql  006_dynamic_topics.sql  007_calculator_allowed.sql  008_email_verification.sql  009_password_reset.sql  010_answer_type.sql  011_solution_latex.sql  012_question_image.sql  013_time_limit.sql  014_granular_subtopics.sql  015_delete_orphaned_problems.sql  016_streaks_and_peak_elo.sql  017_normalize_email_lowercase.sql  018_fix_answer_key_formats.sql  019_daily_puzzles.sql  020_performance_indexes.sql  021_physics_tables.sql  021_review_mastery.sql  024_seed_physics_problems.sql  025_question_image_url.sql
crates/backend/src/: config.rs  db.rs  elo.rs  email.rs  grader.rs  main.rs  rate_limit.rs  topics.rs  validation.rs
crates/backend/src/api/: auth.rs  daily.rs  factory.rs  leaderboard.rs  mod.rs  oauth.rs  physics.rs  problems.rs  profile.rs  review.rs  stats.rs  submit.rs  topics.rs
crates/backend/src/auth/: api_key.rs  cookie.rs  jwt.rs  middleware.rs  mod.rs
crates/backend/src/models/: attempt.rs  bookmark.rs  daily_puzzle.rs  email_verification.rs  mod.rs  password_reset.rs  physics_attempt.rs  physics_problem.rs  problem.rs  review_queue.rs  user.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: badges.rs  constants.rs  elo.rs  grader.rs  katex_validate.rs  latex.rs  lib.rs  mathjson.rs  svg_compress.rs  symengine.rs  validation.rs
crates/common/src/grader/: boolean.rs  equation.rs  expression.rs  inequality.rs  interval.rs  matrix.rs  mod.rs  multipart.rs  numeric.rs  ordered.rs  parse.rs  set.rs  test_utils.rs  word.rs
crates/dsl/: Cargo.toml
crates/dsl-cli/: Cargo.toml
crates/dsl-cli/src/: ai.rs  main.rs  upload.rs
crates/dsl-cli/src/prompts/: agent_tools.json  system_prompt.md  topic_playbook.md
crates/dsl/examples/: render_samples.rs
crates/dsl/src/: answer.rs  constraints.rs  display.rs  error.rs  format.rs  functions.rs  latex.rs  lib.rs  resolver.rs  sampler.rs  spec.rs  template.rs  validate.rs
crates/dsl/src/diagram/: cetz.rs  circle.rs  compile.rs  coordinate_plane.rs  eval.rs  field.rs  force_diagram.rs  function_graph.rs  mod.rs  number_line.rs  polygon.rs  spec.rs  style.rs  triangle.rs  world.rs
crates/dsl/src/gpu/: bytecode.rs  compile.rs  compute.rs  cpu_exec.rs  enumerator.rs  gpu_exec.rs  hoist.rs  mod.rs  program.wgsl  sampler.wgsl
crates/dsl/tests/: diagram_render.rs  end_to_end.rs
crates/forum/: Cargo.toml  Trunk.toml  index.html
crates/forum/src/: api.rs  main.rs
crates/forum/src/components/: comment.rs  mod.rs  nav.rs  post_card.rs
crates/forum/src/pages/: mod.rs  new_post.rs  post_detail.rs  post_list.rs
crates/frontend/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/frontend/.cargo/: config.toml
crates/frontend/badges/: PROMPTS.md
crates/frontend/src/: api.rs  env.rs  grader.rs  katex_bindings.rs  main.rs  oauth.rs  problem_queue.rs  symengine.rs  utils.rs
crates/frontend/src/components/: activity_matrix.rs  answer_input.rs  badge_grid.rs  bookmark_button.rs  draggable.rs  email_input.rs  latex_renderer.rs  math_field.rs  math_input.rs  mod.rs  navbar.rs  problem_card.rs  problem_interface.rs  sidebar.rs  timer.rs  topic_selector.rs  whiteboard.rs
crates/frontend/src/components/physics/: canvas.rs  challenge_panel.rs  controls.rs  equation_builder.rs  fbd_builder.rs  mod.rs  prediction_input.rs  quantity_selector.rs  reflection_panel.rs  what_if_explorer.rs
crates/frontend/src/formatters/: common.rs  equation.rs  inequality.rs  interval.rs  matrix.rs  mod.rs  multi_part.rs  set.rs  tests.rs
crates/frontend/src/pages/: bookmarks.rs  daily.rs  daily_archive.rs  daily_detail.rs  forgot_password.rs  home.rs  leaderboard.rs  login.rs  mod.rs  physics.rs  physics_problem.rs  practice.rs  privacy_policy.rs  profile.rs  ranked.rs  register.rs  reset_password.rs  review.rs  settings.rs  stats.rs  terms_of_service.rs  verify_email.rs  weak_areas.rs  wrong_answers.rs
crates/physics-sim/: Cargo.toml
crates/physics-sim/src/: checkpoint.rs  controller.rs  lib.rs  overlays.rs  renderer.rs  scene_builder.rs  world.rs
crates/services-backend/: Cargo.toml  Dockerfile
crates/services-backend/migrations/: 001_forum_tables.sql  002_status_checks.sql
crates/services-backend/src/: auth.rs  config.rs  main.rs
crates/services-backend/src/forum/: handlers.rs  mod.rs  models.rs
crates/services-backend/src/status/: handlers.rs  mod.rs  models.rs  monitor.rs
crates/status/: Cargo.toml  Trunk.toml  index.html
crates/status/src/: api.rs  main.rs
crates/status/src/components/: chart.rs  mod.rs  status_indicator.rs
crates/status/src/pages/: dashboard.rs
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.dev.sh
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  BACKEND.md  CONTRIBUTING_DOCS.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  DSL_SPEC.md  FRONTEND.md  GRADING.md  LEPTOS_PATTERNS.md  LOOKUP_TABLE.md  SUMMARY.md  SYMENGINE_FFI.md  TESTING.md
factory/: DEVELOPER_GUIDE.md  FACTORY_GUIDE.md  OVERVIEW.md  QUICKSTART.md  README.md  automate_pipeline.py  generate_and_publish.sh  generate_daily_puzzles.py  import_db.py  publish_db.py  start.sh  topup.py
scripts/: check-status.sh  deploy-cloudflare-pages.sh  deploy-community.sh  (+11 more)
(+953 files in other folders)
