[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/frontend",
    "crates/backend",
    "crates/services-backend",
    "crates/forum",
    "crates/status",
]
exclude = ["symengine.js/examples/rust-trunk"]

[workspace.package]
version = "0.1.5"
edition = "2024"
authors = ["FizzWizzleDazzle <arturmisiurev@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# Backend
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
tower_governor = "0.8"
governor = "0.10"
validator = { version = "0.20", features = ["derive"] }
regex = "1.12"
lazy_static = "1.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
urlencoding = "2"

# Frontend
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.dev.package."*"]
opt-level = 3
