[package]
name = "locus-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
locus-common = { path = "../common" }

# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# WASM runtime for SymEngine
wasmtime = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Utils
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
anyhow = "1.0"
