[package]
name = "locus-dsl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for LocusDSL problem generation"

[[bin]]
name = "dsl-cli"
path = "src/main.rs"

[dependencies]
locus-dsl = { path = "../dsl" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
