[package]
name = "locus-dsl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for LocusDSL problem generation"

[[bin]]
name = "dsl-cli"
path = "src/main.rs"

[dependencies]
locus-dsl = { path = "../dsl", features = ["gpu"] }
locus-common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
rayon = { workspace = true }
rust-s3 = { version = "0.36", default-features = false, features = ["tokio-rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
