[package]
name = "locus-frontend"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
locus-common = { path = "../common" }

# Leptos framework
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
leptos-use = "0.15"

# HTTP client
gloo-net = { workspace = true }
gloo-storage = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "KeyboardEvent",
    "MessageEvent",
    "PopStateEvent",
    "Url",
    "console",
] }
console_error_panic_hook = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { workspace = true }
thiserror = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

