[package]
name = "locus-services-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Utils
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
reqwest = { workspace = true }

# Rate limiting
tower_governor = { workspace = true }
governor = { workspace = true }
