[package]
name = "locus-status"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Leptos framework
leptos = { workspace = true }
leptos_router = { workspace = true }

# HTTP client
gloo-net = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "RequestCredentials",
    "console",
] }
console_error_panic_hook = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
